# pattern-solver

./: .env  CODESPACES_GUIDE.md  DOCKER_WORKFLOW.md  Dockerfile.arc-agi3  MANIFEST.in  README.md  README_IMPLEMENTATION_STATUS.md  README_V5.md  arc_genetic_baby_v6_arc3_adapter.py  benchmark_results.json  build_v5.py  docker-compose.arc-validation.yml  integration_results.json  pyproject.toml  test_updated_modules.py  test_v6.py  validation_report.json
.devcontainer/: devcontainer.json
arc_genetic_baby_v4/: active_inference.py  agent_v5.py  agent_v6.py  analogy.py  causal_discovery.py  config.py  counterfactual.py  curiosity_engine.py  deep_causal.py  developmental_curriculum.py  high_order_symbolic.py  main.py  metacognition.py  natural_instruction.py  perception.py  planner.py  productive_composition.py  program_synthesis.py  self_play_engine.py  sleep.py  symbolic_abstraction.py
evidence/: INTELLIGENCE_REPORT.md  intelligence_evidence.json
scripts/: benchmark.py  build_kaggle_submission.py  demonstrate_intelligence.py  measure_explosive_growth.py  setup_kaggle_auth.py  test_arc_integration.py  validate-docker.ps1  validate-docker.sh  validate-local.ps1  validate_before_submit.py
tests/: test_agent.py  test_all_gaps.py  test_curiosity_engine.py  test_v5_gaps.py  test_v6_integration.py
