[project]
name = "arc-genetic-baby-v4"
version = "0.1.0"
description = "ARC-AGI-3 Winning Agent: Neuro-Cognitive Architecture with Active Inference + Program Synthesis"
authors = [{name = "ARC-AGI-3 Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

# Core dependencies for the 5-layer cognitive architecture
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",           # Neural layers for predictive coding
    "deap>=1.4",            # Evolutionary program synthesis
    "sympy>=1.12",          # Symbolic program manipulation
    "networkx>=3.0",        # Graphs for Structure Mapping
    "scipy>=1.10",          # Scientific computing
    "scikit-learn>=1.3",    # Clustering and ML utilities
    "matplotlib>=3.7",      # Visualization
    "tqdm>=4.65",           # Progress bars
    "pydantic>=2.0",        # Configuration management
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "mypy>=1.5",
    "flake8>=6.0",
    "isort>=5.12",
]

[project.scripts]
arc-agent = "arc_genetic_baby_v4.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
